[package]
name = "pes"
version = "0.1.0"
edition = "2021"

[features]
optimize = ["log/release_max_level_warn"]
web = ["wgpu/webgl"]
default = ["optimize"]

[dependencies]
log = "0.4"
pixels = "0.9.0"
wgpu = "0.12"
winit = "0.26"
winit_input_helper = "0.11"
console_error_panic_hook = "0.1"
console_log = "0.2"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4"
web-sys = {version = "0.3", features = ["MouseEvent"]}
env_logger = "0.9"
pollster = "0.2"
lazy_static = "1.4.0"

[profile.release]
#lto = true
#opt-level = 3
overflow-checks = false
